Fix small menu alignment inconsistency

--- a/source/theme/styles/components/_main-navigation.scss
+++ b/source/theme/styles/components/_main-navigation.scss
@@ -79,6 +79,10 @@
   border-radius: 8px;
 }
 
+.title-bar__dashboard a {
+  padding-right: 0;
+}
+
 .product-navigation {
   display: flex;
   height: 40px;
